<resources>

    <string name="app_name">CSEA</string>
    <string name="title_news">News</string>
    <string name="title_clinic">Clinic</string>
    <string name="title_assocn">Association</string>
    <string name="title_interns">Internships</string>
    <string name="title_dept">Department</string>
    <string name="title_logout"> Logout</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="chooser_title">sms</string>

    <string-array name="ta_office_hours">
        <item>09:00 - 09:15</item>
        <item>09:15 - 09:30</item>
        <item>09:30 - 09:45</item>
        <item>09:45 - 10:00</item>
    </string-array>

    <string-array name="ta_course">
        <item>CSCE106</item>
        <item>CSCE110</item>
        <item>CSCE210</item>
    </string-array>


</resources>
