<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="What's New!"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/navigation_clinic"
        android:icon="@drawable/ic_code_black_24dp"
        android:title="@string/title_clinic"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/navigation_assocn"
        android:icon="@drawable/bb_assn"
        android:title="@string/title_assocn"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/navigation_interns"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_interns"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/navigation_dept"
        android:icon="@drawable/ic_developer_board_black_24dp"
        android:title="@string/title_dept"
        app:showAsAction="always|collapseActionView" />


</menu>
